--- a/client/Members.html
+++ b/client/Members.html
@@ -10,5 +10,9 @@
 </head>
 <body>
     
+    <div class="res">   
+        <embed src="./pdf/Resume, Chaipakon Luangprasert.pdf" type="application/pdf" width="100%" height="580px" />
+
+    </div>
 </body>
 </html>
