--- a/client/Members.html
+++ b/client/Members.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="res">   
-        <embed src="./pdf/Resume, Chaipakon Luangprasert.pdf" type="application/pdf" width="100%" height="580px" />
+        <embed src="./pdf/Resume, CHAIPAKON LUANGPRASERT.pdf" type="application/pdf" width="100%" height="580px" />
 
     </div>
 </body>
